--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dates",
+  "name": "@mohsen_saremi/react-dates",
   "version": "21.8.1",
   "description": "A responsive and accessible date range picker component built with React",
   "main": "index.js",
