--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/core": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.0.0",
+    "@material-ui/core": "^4.0.0",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-info": "^5.1.11",
     "@storybook/addon-links": "^5.1.11",
@@ -136,8 +137,9 @@
   },
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.0.0",
     "moment": "^2.18.1",
+    "moment-jalaali": "^0.7.4",
     "react": "^0.14 || ^15.5.4 || ^16.1.1",
     "react-dom": "^0.14 || ^15.5.4 || ^16.1.1",
     "react-with-direction": "^1.3.1"
