--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "@babel/core": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.0.0",
-    "@material-ui/core": "^4.0.0",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-info": "^5.1.11",
     "@storybook/addon-links": "^5.1.11",
@@ -129,15 +128,14 @@
     "prop-types": "^15.7.2",
     "raf": "^3.4.1",
     "react-moment-proptypes": "^1.7.0",
-    "react-outside-click-handler": "^1.3.0",
     "react-portal": "^4.2.1",
     "react-with-direction": "^1.3.1",
     "react-with-styles": "^4.1.0",
-    "react-with-styles-interface-css": "^6.0.0"
+    "react-with-styles-interface-css": "^6.0.0",
+    "@material-ui/core": "^4.0.0"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
-    "@material-ui/core": "^4.0.0",
     "moment": "^2.18.1",
     "moment-jalaali": "^0.7.4",
     "react": "^0.14 || ^15.5.4 || ^16.1.1",
