--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mohsen_saremi/react-dates-mui",
-  "version": "21.8.3",
+  "version": "21.8.4",
   "description": "A responsive and accessible date range picker component built with React",
   "main": "index.js",
   "scripts": {
@@ -132,7 +132,8 @@
     "react-with-direction": "^1.3.1",
     "react-with-styles": "^4.1.0",
     "react-with-styles-interface-css": "^6.0.0",
-    "@material-ui/core": "^4.0.0"
+    "@material-ui/core": "^4.0.0",
+    "clsx": "^1.0.4"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
