remove react-with-styles dependecy

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,12 +2,7 @@
   "root": true,
 
   "extends": [
-    "airbnb",
-    "plugin:react-with-styles/recommended"
-  ],
-
-  "plugins": [
-    "react-with-styles"
+    "airbnb"
   ],
 
   "env": {
@@ -21,8 +16,6 @@
     "react/forbid-foreign-prop-types": 2, // For babel-plugin-transform-react-remove-prop-types
 
     "jsx-a11y/click-events-have-key-events": 1, // TODO: enable
-
-    "react-with-styles/no-unused-styles": 2,
 
     "no-restricted-imports": 0, // TODO: enable with full RTL support
 
