--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:css -- --optimize ",
+    "build": "npm run build:cjs && npm run build:esm ",
     "build:cjs": "BABEL_ENV=cjs babel src/ -d lib/",
     "build:esm": "BABEL_ENV=esm babel src/ -d esm/",
-    "prebuild:css": "rimraf lib/css && mkdirp lib/css",
-    "build:css": "node scripts/buildCSS.js",
     "clean": "rimraf lib esm",
     "precover": "rimraf coverage && npm run react",
     "cover": "cross-env NODE_ENV=test node --max-old-space-size=4096 $(which nyc) npm run mocha",
@@ -85,7 +83,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-plugin-react-with-styles": "^2.2.0",
     "git-directory-deploy": "^1.5.1",
     "imports-loader": "^0.8.0",
     "in-publish": "^2.0.0",
@@ -105,8 +102,6 @@
     "raw-loader": "^0.5.1",
     "react": "^0.14 || ^15.5.4 || ^16.1.1",
     "react-dom": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-with-styles-interface-aphrodite": "^6.0.0",
-    "react-with-styles-interface-css-compiler": "^2.2.0",
     "rimraf": "^2.6.3",
     "safe-publish-latest": "^1.1.3",
     "sass-loader": "^7.2.0",
@@ -130,8 +125,6 @@
     "react-moment-proptypes": "^1.7.0",
     "react-portal": "^4.2.1",
     "react-with-direction": "^1.3.1",
-    "react-with-styles": "^4.1.0",
-    "react-with-styles-interface-css": "^6.0.0",
     "@material-ui/core": "^4.0.0",
     "clsx": "^1.0.4"
   },
