--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "@storybook/react": "^5.1.11",
     "@welldone-software/why-did-you-render": "^3.3.1",
     "airbnb-js-shims": "^2.2.0",
-    "aphrodite": "^2.3.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-inline-react-svg": "^1.1.0",
@@ -112,7 +111,9 @@
     "webpack": "^4.31.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.0",
     "airbnb-prop-types": "^2.16.0",
+    "clsx": "^1.0.4",
     "color2k": "^1.1.0",
     "consolidated-events": "^1.1.1 || ^2.0.0",
     "enzyme-shallow-equal": "^1.0.4",
@@ -124,9 +125,7 @@
     "raf": "^3.4.1",
     "react-moment-proptypes": "^1.7.0",
     "react-portal": "^4.2.1",
-    "react-with-direction": "^1.3.1",
-    "@material-ui/core": "^4.0.0",
-    "clsx": "^1.0.4"
+    "react-with-direction": "^1.3.1"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
