update gp pages

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "storybook": "start-storybook -p 6006",
     "storybook:css": "npm run build:css && start-storybook -p 6006 -c .storybook-css",
     "tag": "git tag v$npm_package_version",
-    "gh-pages:clean": "rimraf _gh-pages",
-    "gh-pages:build": "$(npm bin)/build-storybook -o _gh-pages",
-    "gh-pages:publish": "$(npm bin)/git-directory-deploy --directory _gh-pages",
+    "gh-pages:clean": "rimraf _gh-pages/$(git branch | sed -n -e 's/^\\* \\(.*\\)/\\1/p')",
+    "gh-pages:build": "$(npm bin)/build-storybook -o _gh-pages/$(git branch | sed -n -e 's/^\\* \\(.*\\)/\\1/p')",
+    "gh-pages:publish": "$(npm bin)/git-directory-deploy --directory _gh-pages/$(git branch | sed -n -e 's/^\\* \\(.*\\)/\\1/p')",
     "gh-pages": "npm run gh-pages:clean && npm run gh-pages:build && npm run gh-pages:publish",
     "version:patch": "npm --no-git-tag-version version patch",
     "version:minor": "npm --no-git-tag-version version minor",
