--- a/package.json
+++ b/package.json
@@ -125,16 +125,14 @@
     "prop-types": "^15.7.2",
     "raf": "^3.4.1",
     "react-moment-proptypes": "^1.7.0",
-    "react-portal": "^4.2.1",
-    "react-with-direction": "^1.3.1"
+    "react-portal": "^4.2.1"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.0.0",
     "moment": "^2.18.1",
     "moment-jalaali": "^0.7.4",
     "react": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-with-direction": "^1.3.1"
+    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1"
   },
   "greenkeeper": {
     "ignore": [
