--- a/package.json
+++ b/package.json
@@ -109,10 +109,10 @@
     "sinon-sandbox": "^2.0.5",
     "style-loader": "^0.20.3",
     "typescript": "*",
-    "webpack": "^4.31.0"
+    "webpack": "^4.31.0",
+    "@material-ui/core": "^4.0.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.0.0",
     "airbnb-prop-types": "^2.16.0",
     "clsx": "^1.0.4",
     "color2k": "^1.1.0",
@@ -132,7 +132,8 @@
     "moment": "^2.18.1",
     "moment-jalaali": "^0.7.4",
     "react": "^0.14 || ^15.5.4 || ^16.1.1",
-    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1"
+    "react-dom": "^0.14 || ^15.5.4 || ^16.1.1",
+    "@material-ui/core": "^4.0.0"
   },
   "greenkeeper": {
     "ignore": [
